# cmux-linux

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MY-CONTRIBUTIONS.md  README.md  build.rs  ghostty.h
.github/workflows/: ci-linux.yml  ci-macos-rust.yml  ci.yml
.memsearch/memory/: 2026-07-08.md  2026-07-09.md
.mycelium/: mycelium.db
docs/: KNOWN-ISSUES.md  phase-c-plan.md  v2-api-migration.md
packaging/: CLAUDE.md
packaging/macos/: Info.plist  build-app-bundle.sh  build-dmg.sh  cmux.rb
packaging/rpm/: cmux.spec
packaging/scripts/: build-deb.sh  build-rpm.sh  cmux-app-wrapper.sh
scripts/: build-appimage.sh  fleet-smoke.sh  install-chromium.sh  setup-linux.sh  setup-macos.sh
src/: agent.rs  app_state.rs  browser.rs  browser_settings.rs  config.rs  logging.rs  main.rs  menus.rs  platform.rs  procstat.rs  session.rs  shortcuts.rs  sidebar.rs  split_engine.rs  ssh_dialog.rs  ssh_hosts.rs  workspace.rs
src/cli/: discovery.rs  doctor.rs  format.rs  mod.rs  quit.rs  socket_client.rs
src/ghostty/: callbacks.rs  surface.rs
src/platform/: dirs.rs  notify.rs  procinfo.rs
src/socket/: auth.rs  commands.rs  error.rs  events.rs  handlers.rs  mod.rs  rendezvous.rs
src/ssh/: bridge.rs  deploy.rs  mod.rs  tunnel.rs
tests_v2/: test_orchestration_v3.py  test_quit_verb.py
